# telegram-errors-logging

./: Dockerfile  README.md  main.py  pyproject.toml  start
app/api/endpoints/: endpoints.py
app/error_handler/: error_handler.py
app/schema/: error_message.py  request_body.py  response_body.py
app/service/: call_microservice.py  services.py
app/settings/: __init__.py  app_factory.py  config.py  http_client.py  middlewares.py  mongo_db.py  postgre_db.py  telegram_bot.py
