[tool.poetry]
name = "telegram-errors-logging"
version = "0.1.0"
description = ""
authors = ["daurena2612 <dauren.abdykarim>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
loguru = "^0.7.2"
pymongo = "^4.7.3"
pydantic = "^2.7.4"
pre-commit = "^3.7.1"
python-telegram-bot = "^21.4"
orjson = "^3.10.6"
aiogram = "^3.11.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
